# deepcode

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture_Design.md  CLAUDE.md  DeepGuard_Compliance_Engine.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  diagram_cn_pipeline_mermaid.mmd  diagrams.py  diagrams_cn.py  generate_executive_summary.py  generate_pdf.py  generate_pdf_cn.py  mkdocs.yml  pyproject.toml  玄武合规引擎_商业计划书.md
.claude/skills/: deepguard-architecture  deepguard-delivery-quality  deepguard-requirements-traceability
.cursor/skills/deepguard-agent-browser/: SKILL.md
.cursor/skills/deepguard-architecture/: SKILL.md  reference.md
.cursor/skills/deepguard-delivery-quality/: SKILL.md
.cursor/skills/deepguard-mcporter/: SKILL.md
.cursor/skills/deepguard-requirements-traceability/: SKILL.md
.cursor/skills/deepguard-ui-style-guide/: SKILL.md  reference.md
.github/workflows/: docs.yml  quality.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_policy_uploads.py  0003_scan_workflow_observability.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/src/deepguard_api/: __init__.py  audit_redact.py  auth_deps.py  config.py  deps.py  logging_json.py  main.py  queue_publish.py  s3_presign.py  schemas.py
apps/api/tests/: test_l14_tenant_and_auditor.py  test_scan_notifications_accepted.py  test_scan_workflow_api.py
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/web/e2e/: api-validation.spec.ts  bdd-benchmark-manifest-mock.spec.ts  bdd-benchmark-manifest.spec.ts  bdd-console-power-rag-mock.spec.ts  bdd-console-power-rag.spec.ts  bdd-epic-dg-14-comprehensive-mock.spec.ts  console.spec.ts  e2e-live-control-plane.spec.ts  repo-upload-minio.spec.ts
apps/web/e2e/features/: README.md  benchmark-manifest.feature.md  console-mvp.feature.md  epic-dg-14-bdd-catalog.feature.md
apps/web/e2e/helpers/: bdd-step-screenshot.ts
apps/web/scripts/: agent-browser-smoke.sh
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: app-shell.tsx  create-scan-form.tsx  providers.tsx  scan-status-badge.tsx  theme-context.tsx  toast-context.tsx  toast-region.tsx  upload-repo-modal.tsx
apps/web/src/lib/: api-client.ts  api-types.ts  connection-settings.ts  health.ts  map-api-validation.ts  recent-scans.ts  storage-keys.ts  uuid.ts  validate-create-scan.ts
apps/worker/: __init__.py  main.py
apps/worker/src/deepguard_worker/: __init__.py  __main__.py  ingest_stub.py  run.py  (+3 more)
docker/: compose.dev.yml  minio-cors.json
docker/langfuse/: README.md
docs/: dev-setup.md
docs/benchmarks/: README.md  deepguard-benchmark-manifest.json  deepguard-benchmark-manifest.yaml
docs/design/: README.md  frontend-console-mvp-wireframes-and-mockups.md  frontend-implementation-plan.md  phase-L0-monorepo-scaffold.md  phase-L1-data-plane.md
docs/user-stories/: 00-numbering-and-traceability.md  CHANGELOG.md  EPIC-01-scan-job-orchestration.md  EPIC-02-control-plane-api.md  EPIC-03-identity-tenancy-rbac.md  EPIC-04-ingestion-hermes.md  EPIC-05-policy-tiresias.md  EPIC-06-code-indexing-argus.md  EPIC-07-iac-cloud-analyzers.md  EPIC-08-compliance-athena.md  EPIC-09-remediation-circe.md  EPIC-10-reporting-penelope.md  EPIC-11-observability-cost-governance.md  EPIC-12-console-ui.md  EPIC-13-security-deployment-modes.md  EPIC-14-console-frontend-backend-mvp.md  README.md  SUPPLEMENT-EPIC-02-04-ingestion-contracts.md  traceability-ac-detail-matrix.csv  traceability-ac-detail.json  traceability-epic-dg-14-bdd-evidence.csv  traceability-matrix-sample.csv
docs/user-stories/bdd-stubs/: EPIC-DG-01.feature  EPIC-DG-02.feature  EPIC-DG-03.feature  EPIC-DG-04.feature  EPIC-DG-05.feature  EPIC-DG-06.feature  EPIC-DG-07.feature  EPIC-DG-08.feature  EPIC-DG-09.feature  EPIC-DG-10.feature  EPIC-DG-11.feature  EPIC-DG-12.feature  EPIC-DG-13.feature  EPIC-DG-14.feature  README.md
docs/user-stories/phase-exports/: README.md  traceability-C0.csv  traceability-C0.json  traceability-C1.json  traceability-C3.csv  traceability-C5.csv  traceability-C5.json  traceability-L10.csv  traceability-L10.json  traceability-L11.csv  traceability-L11.json  traceability-L12.csv  traceability-L12.json  traceability-L13.csv  traceability-L13.json  traceability-L14.csv  traceability-L14.json  traceability-L3.csv  traceability-L3.json  traceability-L4.csv  traceability-L4.json  traceability-L5.csv  traceability-L5.json  traceability-L6.csv  traceability-L6.json  traceability-L7.csv  traceability-L7.json  traceability-L8.csv  traceability-L8.json  traceability-L9.csv  traceability-L9.json
docs/user-stories/squads/: README.md
documentation/: agentic-orchestration.md  agents-and-states.md  architecture.md  backlog.md  control-plane-api.md  design.md  docker-data-plane.md  getting-started.md  index.md  langstack-usage-and-roadmap.md  monorepo.md  repository-reference.md  testing-ci.md  worker-queue.md
documentation/diagrams/: README.md  odysseus-agent-flow-with-substates.mmd  odysseus-full-agent-flow.mmd
eval/fixtures/api/: create_scan_min.json
eval/fixtures/cloud/: resource_snapshot_min.json
eval/fixtures/iac/: minimal.tf
eval/harness/fixtures/: athena_gold_sample.jsonl
eval/harness/tests/: test_cross_layer_gold.py
reports/benchmark/: scan-ids.example.txt
scripts/: ci_quality.sh  e2e_full_scan.sh  export_benchmark_reports_index.py  generate_ac_details_and_squad_docs.py  generate_bdd_stubs_from_traceability.py  generate_phase_html_reports.py  playwright_bdd_report_to_pdf.py  render_documentation_diagrams.sh  run_langsmith_eval_stub.py  run_lint_imports.sh  run_web_e2e_power_rag_bdd.sh  seed_dev_tenant.py  validate_user_stories_traceability.py  wait_http.sh  wait_minio_health.sh
tests/: __init__.py  conftest.py  test_l0_smoke.py  test_l12_worker_graph_memory.py  test_l3_api.py  test_l4_api.py  test_l4_worker_settings.py  test_l4_worker_unit.py
tests/e2e/: test_full_scan_local.py
tests/integration/: __init__.py  reporting.py  test_l1_data_plane.py  test_l3_api_postgres.py
(+40 files in other folders)
